<resources>
    <string name="app_name">Mascotas</string>
    <string name="pet">Mascota</string>
    <string name="duke">Duke</string>
    <string name="max">Max</string>
    <string name="mel">Mel</string>
    <string name="sal">Salchicha</string>
    <string name="snow">Snowball</string>

    <string name="arrayMascotas">ArrayMascotasPets</string>
    <string name="fav">Mascotas favoritas</string>

    <string name="menuContacto">Contacto</string>
    <string name="menuAcerca">Acerca de</string>
    <string name="enviarComment">Enviar comentario</string>
    <string name="contactoTitle">Contacto</string>

    <string name="hintNombre">Introduce tu nombre</string>
    <string name="hintEmail">Introduce tu correo</string>
    <string name="hintMensaje">Empieza a escribir...</string>

    <string name="acercaDe">Acerca De...</string>
    <string name="descripcionCEO">
        “The most beautiful thing we can experience is the mysterious. It is the source of all true art and all science. He to whom this emotion is a stranger, who can no longer pause to wonder and stand rapt in awe, is as good as dead: his eyes are closed.”
    </string>

    <string name="nameMyPet">Snowball</string>
</resources>
